# fapi-bplate

./: .env  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
api/: config.py  main.py
api/commons/: utils.py
api/models/: database.py  request.py  response.py
api/routes/: sample.py  sample2.py
